# neasy-f

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  neasyfConfig.cmake.in
.github/workflows/: tests.yml
cmake/: BuildType.cmake  FindnetCDFFortran.cmake  GKfunctions.cmake
docs/: ford.md
examples/: CMakeLists.txt  example.f90  simple_1d.f90  simple_xy_wr.f90
src/: .fortls  generate_source.py  neasy_f.f90  neasy_f.in.f90  neasy_f.read.in.f90  neasyf.f90  neasyf.get_var.in.f90  neasyf.in.f90  neasyf.put_var.in.f90  neasyf.read.in.f90  neasyf.type.in.f90  neasyf.write.in.f90  netfy.f90
tests/: test_dims.pf  test_metadata.pf  test_read.pf  test_write.pf
